FREEMARKER-138 freemarker-generator: Rename Datasource to DataSource (#9)
* FREEMARKER-138 freemarker-generator: Rename Datasource to DataSource

* FREEMARKER-138 freemarker-generator: Rename Datasource to DataSource

* FREEMARKER-138 freemarker-generator: Rename Datasource to DataSource